Change dropdown z-index, fixes issue #4

--- a/legistream/static/legistream/css/home.css
+++ b/legistream/static/legistream/css/home.css
@@ -33,6 +33,7 @@ html {
 
 .parliament-dropdown {
     position: relative;
+    z-index: 10;
 }
 
 .dropdown-icn {
